--- a/kf5sdk-master-v2/app/src/main/AndroidManifest.xml
+++ b/kf5sdk-master-v2/app/src/main/AndroidManifest.xml
@@ -9,8 +9,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppBaseTheme">
-        <activity android:name=".SplashActivity"
-        >
+        <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -22,6 +21,8 @@
         <activity android:name=".AboutUsActivity">
         </activity>
         <activity android:name=".MainActivity">
+        </activity>
+        <activity android:name=".LanguageActivity">
         </activity>
     </application>
 
