--- a/kf5sdkModule/src/main/AndroidManifest.xml
+++ b/kf5sdkModule/src/main/AndroidManifest.xml
@@ -14,47 +14,58 @@
     <application>
         <activity
             android:name=".system.image.ImageSelectorActivity"
+            android:exported="false"
             android:theme="@style/KF5AppTheme">
         </activity>
         <activity
             android:name=".helpcenter.ui.HelpCenterActivity"
+            android:exported="false"
             android:theme="@style/KF5AppTheme">
         </activity>
         <activity
             android:name=".helpcenter.ui.HelpCenterTypeActivity"
+            android:exported="false"
             android:theme="@style/KF5AppTheme">
         </activity>
         <activity
             android:name=".helpcenter.ui.HelpCenterTypeDetailsActivity"
+            android:exported="false"
             android:theme="@style/KF5AppTheme">
         </activity>
         <activity
             android:name=".helpcenter.ui.HelpCenterTypeChildActivity"
+            android:exported="false"
             android:theme="@style/KF5AppTheme">
         </activity>
         <activity
             android:name=".ticket.ui.LookFeedBackActivity"
+            android:exported="false"
             android:theme="@style/KF5AppTheme">
         </activity>
         <activity
             android:name=".ticket.ui.FeedBackDetailsActivity"
+            android:exported="false"
             android:theme="@style/KF5AppTheme">
         </activity>
         <activity
             android:name=".system.ui.ImageActivity"
+            android:exported="false"
             android:theme="@style/KF5AppTheme">
         </activity>
         <activity
             android:name=".ticket.ui.OrderAttributeActivity"
+            android:exported="false"
             android:theme="@style/KF5AppTheme">
         </activity>
         <activity
             android:name=".ticket.ui.FeedBackActivity"
+            android:exported="false"
             android:theme="@style/KF5AppTheme">
         </activity>
         <activity
             android:name=".im.ui.KF5ChatActivity"
             android:configChanges="orientation|screenSize|keyboard|keyboardHidden"
+            android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/KF5AppTheme">
         </activity>
@@ -62,6 +73,7 @@
         <service
             android:name=".im.service.MessageService"
             android:enabled="true"
+            android:exported="false"
             android:process=":lqRemote">
             <intent-filter>
                 <action android:name="com.kf5.sdk.im.service.MessageService"/>
@@ -70,8 +82,10 @@
 
         <activity
             android:name=".ticket.ui.RatingActivity"
+            android:exported="false"
             android:theme="@style/KF5AppTheme"/>
         <activity android:name=".im.ui.AgentGroupChoseActivity"
+                  android:exported="false"
                   android:theme="@style/KF5AppTheme">
         </activity>
 
