--- a/kf5sdkModule/build.gradle
+++ b/kf5sdkModule/build.gradle
@@ -27,9 +27,12 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+//    compile 'com.github.bumptech.glide:glide:4.7.1'
     testCompile 'junit:junit:4.12'
     //    compile project(':kf5SdkFramework')
     compile 'com.google.code.gson:gson:2.7'
     //    compile 'com.alibaba:fastjson:1.2.18'
     compile files('libs/com.kf5sdk.framework_v2-1.2.jar')
 }
+
+
