--- a/kf5sdkModule/src/main/AndroidManifest.xml
+++ b/kf5sdkModule/src/main/AndroidManifest.xml
@@ -1,74 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.kf5.sdk">
+    package="com.kf5.sdk">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.GET_TASKS"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.GET_TASKS" />
 
     <application>
         <activity
             android:name=".system.image.ImageSelectorActivity"
             android:exported="false"
-            android:theme="@style/KF5AppTheme">
-        </activity>
+            android:theme="@style/KF5AppTheme" />
         <activity
             android:name=".helpcenter.ui.HelpCenterActivity"
             android:exported="false"
-            android:theme="@style/KF5AppTheme">
-        </activity>
+            android:theme="@style/KF5AppTheme" />
         <activity
             android:name=".helpcenter.ui.HelpCenterTypeActivity"
             android:exported="false"
-            android:theme="@style/KF5AppTheme">
-        </activity>
+            android:theme="@style/KF5AppTheme" />
         <activity
             android:name=".helpcenter.ui.HelpCenterTypeDetailsActivity"
             android:exported="false"
-            android:theme="@style/KF5AppTheme">
-        </activity>
+            android:theme="@style/KF5AppTheme" />
         <activity
             android:name=".helpcenter.ui.HelpCenterTypeChildActivity"
             android:exported="false"
-            android:theme="@style/KF5AppTheme">
-        </activity>
+            android:theme="@style/KF5AppTheme" />
         <activity
             android:name=".ticket.ui.LookFeedBackActivity"
             android:exported="false"
-            android:theme="@style/KF5AppTheme">
-        </activity>
+            android:theme="@style/KF5AppTheme" />
         <activity
             android:name=".ticket.ui.FeedBackDetailsActivity"
             android:exported="false"
-            android:theme="@style/KF5AppTheme">
-        </activity>
+            android:theme="@style/KF5AppTheme" />
         <activity
             android:name=".system.ui.ImageActivity"
             android:exported="false"
-            android:theme="@style/KF5AppTheme">
-        </activity>
+            android:theme="@style/KF5AppTheme" />
         <activity
             android:name=".ticket.ui.OrderAttributeActivity"
             android:exported="false"
-            android:theme="@style/KF5AppTheme">
-        </activity>
+            android:theme="@style/KF5AppTheme" />
         <activity
             android:name=".ticket.ui.FeedBackActivity"
             android:exported="false"
-            android:theme="@style/KF5AppTheme">
-        </activity>
+            android:theme="@style/KF5AppTheme" />
         <activity
             android:name=".im.ui.KF5ChatActivity"
             android:configChanges="orientation|screenSize|keyboard|keyboardHidden"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/KF5AppTheme">
-        </activity>
+            android:theme="@style/KF5AppTheme" />
 
         <service
             android:name=".im.service.MessageService"
@@ -76,25 +65,28 @@
             android:exported="false"
             android:process=":lqRemote">
             <intent-filter>
-                <action android:name="com.kf5.sdk.im.service.MessageService"/>
+                <action android:name="com.kf5.sdk.im.service.MessageService" />
             </intent-filter>
         </service>
 
         <activity
             android:name=".ticket.ui.RatingActivity"
             android:exported="false"
-            android:theme="@style/KF5AppTheme"/>
-        <activity android:name=".im.ui.AgentGroupChoseActivity"
-                  android:exported="false"
-                  android:theme="@style/KF5AppTheme">
-        </activity>
+            android:theme="@style/KF5AppTheme" />
+        <activity
+            android:name=".im.ui.AgentGroupChoseActivity"
+            android:exported="false"
+            android:launchMode="singleInstance"
+            android:theme="@style/KF5AppTheme" />
 
-        <provider android:name=".system.provider.PhotoFileProvider"
-                  android:authorities="${applicationId}.chosen.FileProvider"
-                  android:exported="false"
-                  android:grantUriPermissions="true">
-            <meta-data android:name="android.support.FILE_PROVIDER_PATHS"
-                       android:resource="@xml/kf5_camera_file_path"/>
+        <provider
+            android:name=".system.provider.PhotoFileProvider"
+            android:authorities="${applicationId}.chosen.FileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/kf5_camera_file_path" />
         </provider>
     </application>
 
