--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,8 @@ buildscript {
     }
     dependencies {
 //        classpath 'com.android.tools.build:gradle:3.1.0-alpha04'
-        classpath 'com.android.tools.build:gradle:3.3.0-alpha02'
+//        classpath 'com.android.tools.build:gradle:3.3.0-alpha02'
+        classpath 'com.android.tools.build:gradle:3.5.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
