--- a/kf5sdkModule/moduleSetting.gradle
+++ b/kf5sdkModule/moduleSetting.gradle
@@ -7,7 +7,13 @@ buildscript {
                 buildTools: "27.0.3",
                 minSdk    : 14,
                 targetSdk : 27
+
+//compileSdk: 29,
+//buildTools: "29.0.0",
+//minSdk    : 14,
+//targetSdk : 29
         ]
+
         moduleRemote = [
                 supportLib        : "27.1.1",
                 glide             : '4.8.0',
